<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        tools:src="@drawable/ic_launcher_foreground"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        tools:text="Title"

        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingVertical="15dp"
        />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_input_placeholder_name"
        android:paddingVertical="15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:autofillHints="Name"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_input_placeholder_age"
        android:paddingVertical="15dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="number"
        android:autofillHints="Age"
        />

    <Button
        android:id="@+id/button_getNumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/main_button_getNumber"
        tools:text="Button"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle"
        tools:text="Subtitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:padding="15dp"

        />

    <TextView
        android:id="@+id/show_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"

        />
</LinearLayout>